# django_fastapi

./: .gitignore  pyproject.toml
myproject/: db.sqlite3
myproject/fastapi_app/: app.py  auth.py
myproject/myapp/: urls.py  views.py
myproject/myapp/templates/: home.html
myproject/myproject/: settings.py  urls.py
